Do some maintenance
* Provide i18n support
* Provide license file
* Extend author's array
* Bump version

Bug: T123943
Change-Id: I52b751047de773c7a9dd97b33ebab7fe341057a0

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,8 @@
 {
-	"@metadata": {},
+	"@metadata": {
+		"authors": [
+			"Ross McClure"
+		]
+	},
 	"randomselection-desc": "Displays a random option from the given set"
 }
