Restructure extension so parser cache can be used.
Instead of disabling cache, this causes the page to be randomized
in a step that happens after the cache. In detail:
* This means that there is no more dead code elimination for versions
  not chosen. If you put [[category:Foo]] in one of the choices, it will
  the page will be in the category regardless of which choice was chosen
** Additionally, this means all choices will be parsed every time, which
   will take slightly more time.
* This means that parser cache no longer has to be disabled. The uncached
  option is removed. This should significantly improve performance
* Add an option (enabled by default) to disable 304 Not Modified responses.
  This will ensure users (not handled by varnish) will always see a different
  random when the revisit the page. Note, this does not disable browsers
  back/forward cache, so if you hit the back button you will still get the old
  page (I do not think we should disable that cache)
* Add an option to lower s-maxage (CDN/varnish cache time). Default is 45
  seconds, which is a compromise between amount of randomness and being able to
  deal with traffic spikes. The assumption is that with parser cache enabled,
  response time will be very fast, so even a short varnish cache time will result
  in a good reduction in backend traffic for a busy page
* Modernize the extension (remove an unneeded hook, some return values, long arrays)
* Add a header for pages that use this feature. This opens up the potential for
  special handling at the varnish layer (e.g. configure it upon seeing
  X-RandomSelection, to cache multiple versions of the page, and return a different
  one at random, allowing long s-maxage and randomness at the same time.
* Add support for fractional weights in the parser function

Change-Id: I1b8fb01cf32c23651a14c039cd0bbca38dbafddd

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,5 +4,6 @@
 			"Ross McClure"
 		]
 	},
-	"randomselection-desc": "Displays a random option from the given set"
+	"randomselection-desc": "Displays a random option from the given set",
+	"randomselection-invalidweights": "No valid choices"
 }
