Revert "Restructure extension so parser cache can be used."
This reverts commit 89a8c2d300bdcebc96b9d1887695d55f93aa6f80.

That commit effectively makes performance terriable.

Reverting for now until a fix can be done.

Change-Id: Idb8ea30f8d7c1eb27d08fe8648b9e84e49de095b
(cherry picked from commit ffc4a5abac04fa0761dac9a96afe23dc3f924ab0)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -4,6 +4,5 @@
 			"Ross McClure"
 		]
 	},
-	"randomselection-desc": "Displays a random option from the given set",
-	"randomselection-invalidweights": "No valid choices"
+	"randomselection-desc": "Displays a random option from the given set"
 }
